--- a/style.css
+++ b/style.css
@@ -1,2 +1,31 @@
 .attribution { font-size: 11px; text-align: center; }
 .attribution a { color: hsl(228, 45%, 44%); }
+
+* {
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
+
+.ribbon{
+    padding: 40px 80px;
+    display:flex;
+    justify-content: space-between;
+}
+button{
+    border: 1px hsl(321, 100%, 78%) solid;
+    border-radius: 27px;
+    padding: 16px 40px;
+    background: none;
+    font-size: 22px;
+    color: hsl(321, 100%, 78%);
+    box-shadow: 1px 2px 5px 0px;
+}
+
+.wrapper{
+    margin: 60px;
+}
+.hero{
+    display: inline-block;
+    text-align: center;
+    /* justify-content: center; */
+}
