--- a/style.css
+++ b/style.css
@@ -1,22 +1,35 @@
-* {
+body {
+    border: 1px red solid;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    margin: 0 auto;
-    padding: 0px;
+    margin: 0;
+    padding: 0;
     box-sizing: border-box;
 }
-.ribbon{
-    display:flex;
-    justify-content: space-between;
-    padding: 40px 0;
+
+.wrapper{
+    width: min(90%, 70.5rem);
+    border: 2px red dotted;
+
 }
+.navbar{
+    border: 1px black solid;
+    padding: 50px 10px;
+    display:flex;
+    /* items are aligned such as their baselines align */
+    align-items: baseline;
+}
+
+
 span{
-    border: 1px hsl(321, 100%, 78%) solid;
+    border:2px hsl(322, 100%, 66%) solid;
+    box-shadow: 1px 2px rgba(0, 0, 0, 0.3);
     border-radius: 27px;
-    padding: 16px 40px;
+    padding: 12px 50px;
     background: none;
-    font-size: 22px;
-    color: hsl(321, 100%, 78%);
-    box-shadow: 1px 2px 5px 0px;
+    font-size: 23px;
+    color: hsl(322, 100%, 66%);
+    float: right;
+    letter-spacing: .09em;
 }
 
 h1{
@@ -25,8 +38,8 @@ h1{
 }
 
 .wrapper{
-    width: 100%;
-    max-width: 1440px;
+    /* width: 100%; */
+    /* max-width: 1440px; */
 }
 .hero{
     display: flex;
@@ -42,15 +55,17 @@ h1{
     letter-spacing: .1em;
 }
 
-a:last-of-type{
+a{
     letter-spacing: .1em;
     font-size: 24px;
     font-weight: 600;
     color: white;
     text-decoration: none;
     background-color: hsl(322, 100%, 66%);
-    padding: 40px 120px;
+    box-shadow: 3px 5px 2px -2px rgba(0, 0, 0, 0.3);
+    padding: 40px 110px;
     border-radius: 60px;
+    text-align: center;
 }
 
 .hero > img{
@@ -89,12 +104,8 @@ a:last-of-type{
     padding: 20px 35px;
 }
 
-.grid-boxes div:nth-child(2n - 1){
+.grid-boxes div:nth-child(2n){
     background: hsl(207, 100%, 98%);
-}
-
-.box .excluded{
-    background: none;
 }
 
 .box-text{
@@ -119,4 +130,17 @@ footer{
 }
 .attribution a { 
     color: hsl(228, 45%, 44%); 
+}
+
+@media (max-width: 375px){
+    .ribbon{
+        padding: 5px;
+    }
+    .logo{
+        height: 10px;
+        width: 10px;
+    }
+    span{
+        font-size: 6px;
+    }
 }
