--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+/* Setting custom properties */
 body {
     border: 1px red solid;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
@@ -5,26 +6,29 @@ body {
     padding: 0;
     box-sizing: border-box;
 }
-
+ul, li a{
+    list-style: none;
+    text-decoration: none;
+}
 .wrapper{
-    width: min(90%, 70.5rem);
     border: 2px red dotted;
-
+    width: min(90%, 70.5rem);
 }
 .navbar{
     border: 1px black solid;
-    padding: 50px 10px;
+    padding: 50px 40px;
     display:flex;
+    /* items evenly distributed; the first line is at the start of the container while the last one is at the end */
+    justify-content: space-between;
     /* items are aligned such as their baselines align */
     align-items: baseline;
 }
 
-
-span{
+a{
     border:2px hsl(322, 100%, 66%) solid;
     box-shadow: 1px 2px rgba(0, 0, 0, 0.3);
     border-radius: 27px;
-    padding: 12px 50px;
+    padding: 12px 55px;
     background: none;
     font-size: 23px;
     color: hsl(322, 100%, 66%);
@@ -55,7 +59,7 @@ h1{
     letter-spacing: .1em;
 }
 
-a{
+/* a{
     letter-spacing: .1em;
     font-size: 24px;
     font-weight: 600;
@@ -66,7 +70,7 @@ a{
     padding: 40px 110px;
     border-radius: 60px;
     text-align: center;
-}
+} */
 
 .hero > img{
     margin-top: 6em;
@@ -133,14 +137,10 @@ footer{
 }
 
 @media (max-width: 375px){
-    .ribbon{
-        padding: 5px;
+    .navbar{
+        width: min(90%, 70.5rem);
     }
-    .logo{
-        height: 10px;
-        width: 10px;
-    }
-    span{
-        font-size: 6px;
+    .navbar a{
+        padding: 20px 5px;
     }
 }
