--- a/style.css
+++ b/style.css
@@ -1,7 +1,6 @@
 /* Setting custom properties */
 body {
     border: 1px red solid;
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     margin: 0;
     padding: 0;
     box-sizing: border-box;
@@ -20,7 +19,7 @@ h1, h2, h3{
     font-family: 'Poppins', sans-serif;
     font-weight: 700;
 }
-p{
+p,a{
     font-family: 'Open Sans', sans-serif;
 }
 /* Navbar */
@@ -131,13 +130,17 @@ h1:first-of-type{
 .footbar, .links{
     background-color: hsl(192, 100%, 9%);
 }
-
 .footbar{
     padding: 150px 140px;
     display: grid;
     grid-template-columns: 1fr 1fr;
-    grid-gap: 20px;
+    grid-gap: 50px;
     color: white;
+    font-size: 14px;
+    line-height: 1.9em;
+}
+.top-scene{
+    order: 2;
 }
 /* Descendant selector */
 .footbar p{
@@ -148,7 +151,7 @@ h3:first-child{
     text-transform: uppercase;
 }
 /* Filter inverts the samples in the image.  */
-.left-scene img{
+.bottom-scene img{
     filter: invert(100%);
 }
 input:only-of-type{
@@ -161,8 +164,6 @@ input:only-of-type{
 input:focus{
     cursor: pointer;
     outline: none;
-}
-input:required{
     border: 1px red solid;
 }
 button{
@@ -170,7 +171,7 @@ button{
     border-radius: 6px;
     border: 1px hsl(322, 100%, 66%) solid;
     color: white;
-    padding: 13px 25px;
+    padding: 15px 25px;
     margin-left: 15px;
     font-size: 14px;
     font-weight: 600;
@@ -182,14 +183,14 @@ button:hover{
 }
 /* Links */
 .links ul{
-    border: 1px white solid;
+    /* border: 1px white solid; */
     width: 250px;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
 }
 .links i{
-    font-size: 38px;
+    font-size: 32px;
 }
 i:only-of-type:hover{
     color: hsl(207, 100%, 98%);
@@ -212,5 +213,16 @@ i:only-of-type:hover{
     }
     .box-text{
         order: 1;
+    }
+    .footbar{
+        padding: 20px;
+        grid-template-columns: 1fr;
+    }
+    .bottom-scene{
+        order: 2;
+    }
+    button{
+        margin: 8px 15px;
+        float: right;
     }
 }
