--- a/style.css
+++ b/style.css
@@ -24,10 +24,9 @@ p,a{
 }
 /* Navbar */
 .navbar{
-    border: 1px black solid;
-    /* padding: 25px 40px; */
+    /* border: 1px black solid; */
     display:flex;
-    flex-wrap: nowrap;
+    padding: 25px 40px;
     /* items evenly distributed; the first line is at the start of the container while the last one is at the end */
     justify-content: space-around;
     /* items are aligned such as their baselines align */
@@ -35,27 +34,26 @@ p,a{
     align-items: center;
 }
 .logo {
-    /* Ideal width */
-    flex-basis: 200px;
-    flex-shrink: 20;
-    flex-grow: 0;
+    /* Ideal width flex-grow, flex-shrink and flex-basis*/
+    flex: 0 1 200px;
+    display: block;
+    max-width: 50%;
 }
-/* Use only-child selector */
-a:only-child{
-    flex-basis: 200px;
-    flex-shrink: 1;
-    flex-grow: 0;
-    border:2px hsl(322, 100%, 66%) solid;
-    box-shadow: 1px 2px rgba(0, 0, 0, 0.3);
+.navbar > .btn{
+    flex: 0 0 auto;
+    margin-left: auto;
+}
+.btn{
     border-radius: 27px;
-    padding: 12px 55px;
     background: none;
-    font-size: 16px;
+    font-size: 0.875rem;
     color: hsl(322, 100%, 66%);
-    float: right;
+    padding: 0.5em 1.5em;
     letter-spacing: .09em;
+    box-shadow: 1px 2px rgba(0, 0, 0, 0.3);
+    border:2px hsl(322, 100%, 66%) solid;
 }
-a:only-child:hover{
+.btn:hover{
     border: 2px hsl(321, 100%, 78%) solid;
     color: hsl(321, 100%, 78%);
 }
@@ -218,9 +216,7 @@ i:only-of-type:hover{
 }
 
 @media (max-width: 600px){
-    .navbar{
-        justify-content: space-between;
-    }
+    
     h1:first-of-type{
         font-size: 28px;
     }
